Cambios en la interfaz. Creacion interfaz protocolos

--- a/WebContent/addEvolutionDetail.html
+++ b/WebContent/addEvolutionDetail.html
@@ -52,20 +52,10 @@
 	  <tbody>
 	    <tr>
 	      <td>
-	      	<textarea rows="5" cols="50" style="width: 100%; height: 230px;">Blandit incorrupte quaerendum in quo, nibh impedit id vis, vel no nullam semper audiam.
-Ei populo graeci consulatu mei, has ea stet modus phaedrum. Inani oblique ne has, duo et
-veritus detraxit. Tota ludus oratio ea mel, offendit persequeris ei vim. Eos dicat oratio
-partem ut, id cum ignota senserit intellegat. Sit inani ubique graecis ad, quando graecis 
-liberavisse et cum, dicit option eruditi at duo. Homero salutatus suscipiantur eum id,
-tamquam voluptaria expetendis ad sed, nobis feugiat similique usu ex.</textarea>
-	        </td>
+	      	<textarea rows="5" cols="0" style="width: 100%; height: 230px;"></textarea>
+		  </td>
 		 <td>
-		 	<textarea rows="5" cols="50" style="width: 100%; height: 230px;">Blandit incorrupte quaerendum in quo, nibh impedit id vis, vel no nullam semper audiam.
-Ei populo graeci consulatu mei, has ea stet modus phaedrum. Inani oblique ne has, duo et
-veritus detraxit. Tota ludus oratio ea mel, offendit persequeris ei vim. Eos dicat oratio
-partem ut, id cum ignota senserit intellegat. Sit inani ubique graecis ad, quando graecis 
-liberavisse et cum, dicit option eruditi at duo. Homero salutatus suscipiantur eum id,
-tamquam voluptaria expetendis ad sed, nobis feugiat similique usu ex.</textarea>
+		 	<textarea rows="5" cols="50" style="width: 100%; height: 230px;"></textarea>
 	     </td>
 	
 	    </tr>
