--- a/WebContent/createService.html
+++ b/WebContent/createService.html
@@ -53,17 +53,15 @@
 					<input type="number" min="1" name="txtPrice" id="txtPrice" maxlength="3" size="3" /> <br><br>
 				</fieldset>
 				<div id="botonera">
-				<form action="services.html">
-					<div id="botonP">
-						<input type="submit"  class="button"  name="sbmtButton" value="Agregar" style="margin-left:30%; margin-top: 5px;"/>
-					</div>	
-				</form>
-				<form>
-					<div id="botonV" style="position:relative; margin-left: 250px; top: -22px;">
-						<input type="button" class="button" value="Regresar" style="margin-left:40%;" onClick="javascript:history.back();" style="margin-left:40%;" />		
-					</div>	
-				</form>
-			</div>
+					<form action="services.html">
+						<div id="botonP" style="display: inline; margin-right: 30px;">
+									<input type="submit"  class="button"  name="sbmtButton" value="Agregar" />
+						</div>	
+						<div id="botonV" style="display: inline;">
+								<input type="button" class="button" value="Regresar" onClick="javascript:history.back();" />		
+						</div>	
+					</form>
+				</div><br>
 			</div>
 		</div>
 	</body>
