--- a/WebContent/editEmergency.html
+++ b/WebContent/editEmergency.html
@@ -113,6 +113,17 @@
 								<input type="button"id="bedUbication" value="Cambiar" >
 							</a>
 					    </fieldset>
+					    <div id="botonera">
+							<form action="#">
+								<div id="botonP" style="display: inline; margin-right: 30px;">
+											<input type="submit"  class="button"  name="sbmtButton" value="Modificar" />
+								</div>	
+								<div id="botonV" style="display: inline;">
+										<input type="button" class="button" value="Regresar" onClick="javascript:history.back();" />		
+								</div>	
+							</form>
+						</div>
+						<br>
   					</div>
   					<div id="tabs-2">
   						<div style="text-align:right;">
@@ -139,6 +150,16 @@
 								</tr>
 							</tbody>
 						</table>
+						<div id="botonera">
+							<form action="#">
+								<div id="botonP" style="display: inline; margin-right: 30px;">
+											<input type="submit"  class="button"  name="sbmtButton" value="Modificar" />
+								</div>	
+								<div id="botonV" style="display: inline;">
+										<input type="button" class="button" value="Regresar" onClick="javascript:history.back();" />		
+								</div>	
+							</form>
+						</div>
 						<br>
   					</div>
   					<div id="tabs-3">
@@ -188,6 +209,16 @@
 								</tr>
 							</tbody>
 						</table>
+						<div id="botonera">
+							<form action="#">
+								<div id="botonP" style="display: inline; margin-right: 30px;">
+											<input type="submit"  class="button"  name="sbmtButton" value="Modificar" />
+								</div>	
+								<div id="botonV" style="display: inline;">
+										<input type="button" class="button" value="Regresar" onClick="javascript:history.back();" />		
+								</div>	
+							</form>
+						</div>
 						<br>
 					</div>
 					<div id="tabs-4">
@@ -247,21 +278,19 @@
 								</tr>
 							</tbody>
 						</table>
+						<div id="botonera">
+							<form action="#">
+								<div id="botonP" style="display: inline; margin-right: 30px;">
+											<input type="submit"  class="button"  name="sbmtButton" value="Modificar" />
+								</div>	
+								<div id="botonV" style="display: inline;">
+										<input type="button" class="button" value="Regresar" onClick="javascript:history.back();" />		
+								</div>	
+							</form>
+						</div>
 						<br>
 					</div>
 				</div>
-				<div id="botonera">
-				<form action="emergencies.html">
-				<div id="botonP">
-							<input type="submit"  class="button"  name="sbmtButton" value="Modificar" style="margin-left:30%; margin-top: 5px;"/>
-				</div>	
-				</form>
-				<form>
-					<div id="botonV" style="position:relative; margin-left: 250px; top: -22px;">
-							<input type="button" class="button" value="Regresar" style="margin-left:40%;" onClick="javascript:history.back();" style="margin-left:40%;" />		
-					</div>	
-				</form>
-			</div>
 			</div>
 		</div>
 		<div id="deleteProtocol">
