--- a/WebContent/editEstimation.html
+++ b/WebContent/editEstimation.html
@@ -125,9 +125,18 @@
 						</a> 
 					    </fieldset>
 					    
-					    <br><br>
-					
-  					</div>
+						<div id="botonera">
+							<form action="#">
+								<div id="botonP" style="display: inline; margin-right: 30px;">
+											<input type="submit"  class="button"  name="sbmtButton" value="Modificar" />
+								</div>	
+								<div id="botonV" style="display: inline;">
+										<input type="button" class="button" value="Regresar" onClick="javascript:history.back();" />		
+								</div>	
+							</form>
+						</div>
+						<br>
+					</div>
   					<div id="tabs-2">
   						<div style="text-align:right;">
 	  						<a id="go" style="color: #006c92; font-weight: bold;">
@@ -171,6 +180,16 @@
 								</tr>
 							</tbody>
 						</table>
+						<div id="botonera">
+							<form action="#">
+								<div id="botonP" style="display: inline; margin-right: 30px;">
+											<input type="submit"  class="button"  name="sbmtButton" value="Modificar" />
+								</div>	
+								<div id="botonV" style="display: inline;">
+										<input type="button" class="button" value="Regresar" onClick="javascript:history.back();" />		
+								</div>	
+							</form>
+						</div>
 						<br>
   					</div>
   					<div id="tabs-3">
@@ -220,21 +239,19 @@
 								</tr>
 							</tbody>
 						</table>
+						<div id="botonera">
+							<form action="#">
+								<div id="botonP" style="display: inline; margin-right: 30px;">
+											<input type="submit"  class="button"  name="sbmtButton" value="Modificar" />
+								</div>	
+								<div id="botonV" style="display: inline;">
+										<input type="button" class="button" value="Regresar" onClick="javascript:history.back();" />		
+								</div>	
+							</form>
+						</div>
 						<br>
 					</div>
 				</div>
-				<div id="botonera">
-				<form action="estimations.html">
-				<div id="botonP">
-							<input type="submit"  class="button"  name="sbmtButton" value="Modificar" style="margin-left:30%; margin-top: 5px;"/>
-				</div>	
-				</form>
-				<form>
-					<div id="botonV" style="position:relative; margin-left: 250px; top: -22px;">
-							<input type="button" class="button" value="Regresar" style="margin-left:40%;" onClick="javascript:history.back();" style="margin-left:40%;" />		
-					</div>	
-				</form>
-			</div>
 			</div>
 		</div>
 		<div id="deleteProtocol">
