--- a/WebContent/editEvolution.html
+++ b/WebContent/editEvolution.html
@@ -18,6 +18,11 @@
 	</head>
 	<body>
 	<div id="contentAux">
+			<div style="text-align:right;">
+				<a id="addEvolution" href="#" style="color: #006c92; font-weight: bold;">
+					<img alt="logo" src="./images/add.png" height="12" width="12" />Agregar Registro
+				</a>						
+			</div>
 			<br>
 		    <table id="sweetTable">
 				<tbody>
