--- a/WebContent/printAdmission.html
+++ b/WebContent/printAdmission.html
@@ -54,11 +54,11 @@
 		<br>
 		<h3>Datos Paciente</h3>
 		<fieldset>
-			<label for="name" class="etiq"><span id="idCard">Cédula de Identidad: </span></label>V-12345678<br>
-			<label for="name" class="etiq"><span id="idCard">Nombre: </span></label>Ana Rojas<br>
-			<label for="name" class="etiq"><span id="idCard">Responsable del Pago: </span></label>Multinacional de Seguros, C.A.<br> 					
-			<label for="name" class="etiq"><span id="idCard">Motivo de Admisión: </span></label>Dolor abdominal<br>
-			<label for="name" class="etiq"><span id="idCard">Ubicación: </span></label>Emergencias<br>
+			<label for="name" class="etiq"><span id="idCard">Cédula de Identidad: </span></label>V-12345678<br><br>
+			<label for="name" class="etiq"><span id="idCard">Nombre: </span></label>Ana Rojas<br><br>
+			<label for="name" class="etiq"><span id="idCard">Responsable del Pago: </span></label>Multinacional de Seguros, C.A.<br> <br>					
+			<label for="name" class="etiq"><span id="idCard">Motivo de Admisión: </span></label>Dolor abdominal<br><br>
+			<label for="name" class="etiq"><span id="idCard">Ubicación: </span></label>Emergencias<br><br>
 		</fieldset>
 		<br>
 		<br>
@@ -68,18 +68,18 @@
 		
 		<h3>Datos Paciente</h3>
 		<fieldset>
-			<label for="name" class="etiq"><span id="idCard">Cédula de Identidad: </span></label>V-12345678<br>
-			<label for="name" class="etiq"><span id="idCard">Nombre: </span></label>Ana Rojas<br>					
-			<label for="name" class="etiq"><span id="idCard">Médico Tratante: </span></label>Ricardo García<br>
-			<label for="name" class="etiq"><span id="idCard">Departamento: </span></label>Cirugía<br>
-			<label for="name" class="etiq"><span id="idCard">Responsable del Pago: </span></label>Seguros La Previsora<br> 
+			<label for="name" class="etiq"><span id="idCard">Cédula de Identidad: </span></label>V-12345678<br><br>
+			<label for="name" class="etiq"><span id="idCard">Nombre: </span></label>Ana Rojas<br><br>				
+			<label for="name" class="etiq"><span id="idCard">Médico Tratante: </span></label>Ricardo García<br><br>
+			<label for="name" class="etiq"><span id="idCard">Departamento: </span></label>Cirugía<br><br>
+			<label for="name" class="etiq"><span id="idCard">Responsable del Pago: </span></label>Seguros La Previsora<br> <br>
 		</fieldset>
 		<br>
 		<h3>Protocolos</h3>
 		<fieldset>
-			<label for="name" class="etiq"><span id="idCard"></span></label>* Histerectomía<br>
-			<label for="name" class="etiq"><span id="idCard"></span></label>* Colecistectomía<br>
-			<label for="name" class="etiq"><span id="idCard"></span></label>* Apendicectomía<br>
+			<label for="name" class="etiq"><span id="idCard"></span></label>* Histerectomía<br><br>
+			<label for="name" class="etiq"><span id="idCard"></span></label>* Colecistectomía<br><br>
+			<label for="name" class="etiq"><span id="idCard"></span></label>* Apendicectomía<br><br>
 		</fieldset>
 		<br>
 		<h3>Servicios</h3>
