--- a/WebContent/printEmergency.html
+++ b/WebContent/printEmergency.html
@@ -56,11 +56,11 @@
 		
 		<h3>Datos Paciente</h3>
 		<fieldset>
-			<label for="name" class="etiq"><span id="idCard">Cédula de Identidad: </span></label>V-12345678<br>
-			<label for="name" class="etiq"><span id="idCard">Nombre: </span></label>Ana Rojas<br>					
-			<label for="name" class="etiq"><span id="idCard">Fecha de Ingreso: </span></label>20/06/2013 07:35 AM<br>
-			<label for="name" class="etiq"><span id="idCard">Ubicación: </span></label>Planta Baja<br>
-			<label for="name" class="etiq"><span id="idCard">Cama: </span></label>Camilla 1<br> 
+			<label for="name" class="etiq"><span id="idCard">Cédula de Identidad: </span></label>V-12345678<br><br>
+			<label for="name" class="etiq"><span id="idCard">Nombre: </span></label>Ana Rojas<br><br>				
+			<label for="name" class="etiq"><span id="idCard">Fecha de Ingreso: </span></label>20/06/2013 07:35 AM<br><br>
+			<label for="name" class="etiq"><span id="idCard">Ubicación: </span></label>Planta Baja<br><br>
+			<label for="name" class="etiq"><span id="idCard">Cama: </span></label>Camilla 1<br> <br>
 		</fieldset>
 		<br>
 		<h3>Protocolos</h3>
