--- a/WebContent/printHospitalization.html
+++ b/WebContent/printHospitalization.html
@@ -56,20 +56,20 @@
 		
 		<h3>Datos Paciente</h3>
 		<fieldset>
-			<label for="name" class="etiq"><span id="idCard">Cédula de Identidad: </span></label>V-12345678<br>
-			<label for="name" class="etiq"><span id="idCard">Nombre: </span></label>Ana Rojas<br>					
-			<label for="name" class="etiq"><span id="idCard">Fecha de Ingreso: </span></label>20/06/2013 07:35 AM<br>
-			<label for="name" class="etiq"><span id="idCard">Ubicación: </span></label>UCI<br>
-			<label for="name" class="etiq"><span id="idCard">Cama: </span></label>Cama 1<br> 
-			<label for="name" class="etiq"><span id="idCard">Médico Tratante: </span></label>Ricardo García<br>
-			<label for="name" class="etiq"><span id="idCard">Departamento: </span></label>Cirugía<br>  
-			<label for="name" class="etiq"><span id="idCard">Responsable del Pago: </span></label>La Previsora<br>  
+			<label for="name" class="etiq"><span id="idCard">Cédula de Identidad: </span></label>V-12345678<br><br>
+			<label for="name" class="etiq"><span id="idCard">Nombre: </span></label>Ana Rojas<br>	<br>				
+			<label for="name" class="etiq"><span id="idCard">Fecha de Ingreso: </span></label>20/06/2013 07:35 AM<br><br>
+			<label for="name" class="etiq"><span id="idCard">Ubicación: </span></label>UCI<br><br>
+			<label for="name" class="etiq"><span id="idCard">Cama: </span></label>Cama 1<br> <br>
+			<label for="name" class="etiq"><span id="idCard">Médico Tratante: </span></label>Ricardo García<br><br>
+			<label for="name" class="etiq"><span id="idCard">Departamento: </span></label>Cirugía<br>  <br>
+			<label for="name" class="etiq"><span id="idCard">Responsable del Pago: </span></label>La Previsora<br> <br>
 		</fieldset>
 		<br>
 		<h3>Protocolos</h3>
 		<fieldset>
-			<label for="name" class="etiq"><span id="idCard"></span></label> * Histerectomía<br>
-			<label for="name" class="etiq"><span id="idCard"></span></label> * Colecistectomía<br>
+			<label for="name" class="etiq"><span id="idCard"></span></label> * Histerectomía<br><br>
+			<label for="name" class="etiq"><span id="idCard"></span></label> * Colecistectomía<br><br>
 			<label for="name" class="etiq"><span id="idCard"></span></label> * Apendicectomía<br>
 		</fieldset>
 		<br>
