--- a/WebContent/showEstimation.html
+++ b/WebContent/showEstimation.html
@@ -121,18 +121,20 @@
 					</div>
 				</div>
 				<div id="botonera">
-				<form action="printEstimation.html">
-				<div id="botonP">
-							<input type="submit"  class="button"  name="sbmtButton" value="Imprimir" style="margin-left:30%; margin-top: 5px;"/>
-				</div>	
-				</form>				
-				<div id="botonV" style="position:relative; margin-left: 250px; top: -22px;">
-					<a id="go" rel="leanModal" href="#refreshUser" style="color: #f7941e; font-weight: bold;" 
+					<form action="printEstimation.html">
+						<div id="botonP" style="display: inline; margin-right: 30px;">
+									<input type="submit"  class="button"  name="sbmtButton" value="Imprimir" />
+						</div>	
+						<div id="botonV" style="display: inline;">
+								<a id="go" rel="leanModal" href="#refreshUser" style="color: #f7941e; font-weight: bold;" 
 											onclick="return loadVars(1003,'1003');" >
-						<input type="button" class="button" value="Actualizar" style="margin-left:40%;" />			
-					</a>
-				</div>
-			</div>	
+								<input type="button" class="button" value="Actualizar"  />			
+								</a>
+						</div>	
+					</form>
+				</div><br>
+				
+				
 			</div>
 		</div>
 		<div id="refreshUser">
