--- a/WebContent/createPatient.html
+++ b/WebContent/createPatient.html
@@ -136,17 +136,15 @@
   					</div>
   				</div>
 				<div id="botonera">
-				<form action="printEstimation.html">
-				<div id="botonP">
-							<input type="submit"  class="button"  name="sbmtButton" value="Crear" style="margin-left:30%; margin-top: 5px;"/>
-				</div>	
-				</form>				
-				<form>
-					<div id="botonV" style="position:relative; margin-left: 250px; top: -22px;">
-							<input type="button" class="button" value="Regresar" style="margin-left:40%;" onClick="javascript:history.back();" style="margin-left:40%;" />		
-					</div>	
-				</form>
-			</div>	
+					<form action="estimations.html">
+						<div id="botonP" style="display: inline; margin-right: 30px;">
+									<input type="submit"  class="button"  name="sbmtButton" value="Agregar" />
+						</div>	
+						<div id="botonV" style="display: inline;">
+								<input type="button" class="button" value="Regresar" onClick="javascript:history.back();" />		
+						</div>	
+					</form>
+				</div>
 			</div>
 		</div>
 		<div id="refreshUser">
