--- a/WebContent/createSupply.html
+++ b/WebContent/createSupply.html
@@ -18,8 +18,8 @@
         	<div id="menu">
 				<div class="menuitemHome" ><a href="mainMenu.html">Home</a></div>	
 		    	<ul>
-	            	<li class="menuitem"><a href="supplyAreas.html">Ver Áreas Suministros</a></li>
-	            	<li class="menuitem"><a href="supplies.html">Ver Suministros</a></li>
+	            	<li class="menuitem"><a href="supplyAreas.html" >Ver Áreas Suministros</a></li>
+	            	<li class="menuitem"><a href="supplies.html"style="margin-left:10px;">Ver Suministros</a></li>
 	            </ul>
 				<div class="menuitemSalir"><a href="index.html">Salir</a></div>	
         	</div>        
@@ -54,17 +54,15 @@
 					<input type="number" min="1" name="txtAmount" id="txtAmount" maxlength="3" size="3" /> <br><br>
 				</fieldset>
 				<div id="botonera">
-				<form action="supplies.html">
-					<div id="botonP">
-						<input type="submit"  class="button"  name="sbmtButton" value="Agregar" style="margin-left:30%; margin-top: 5px;"/>
-					</div>	
-				</form>
-				<form>
-					<div id="botonV" style="position:relative; margin-left: 250px; top: -22px;">
-						<input type="button" class="button" value="Regresar" style="margin-left:40%;" onClick="javascript:history.back();" style="margin-left:40%;" />		
-					</div>	
-				</form>
-			</div>
+							<form action="supplies.html">
+								<div id="botonP" style="display: inline; margin-right: 30px;">
+											<input type="submit"  class="button"  name="sbmtButton" value="Agregar" />
+								</div>	
+								<div id="botonV" style="display: inline;">
+										<input type="button" class="button" value="Regresar" onClick="javascript:history.back();" />		
+								</div>	
+							</form>
+				</div>
 			</div>
 		</div>
 	</body>
