--- a/WebContent/editService.html
+++ b/WebContent/editService.html
@@ -19,7 +19,7 @@
 				<div class="menuitemHome" ><a href="mainMenu.html">Home</a></div>	
 		    	<ul>
 	            	<li class="menuitem"><a href="services.html">Ver Servicios</a></li>
-            		<li class="menuitem"><a href="createService.html">Crear Servicio</a></li>
+            		<li class="menuitem"><a href="createService.html" style="margin-left: 10px;">Crear Servicio</a></li>
 	            </ul>
 				<div class="menuitemSalir"><a href="index.html">Salir</a></div>	
         	</div>        
@@ -54,17 +54,15 @@
 					<input type="number" min="1" name="txtPrice" id="txtPrice" maxlength="3" size="3" value="6363.20" /> <br><br>
 				</fieldset>
 				<div id="botonera">
-				<form action="services.html">
-					<div id="botonP">
-						<input type="submit"  class="button"  name="sbmtButton" value="Modificar" style="margin-left:30%; margin-top: 5px;"/>
-					</div>	
-				</form>
-				<form>
-					<div id="botonV" style="position:relative; margin-left: 250px; top: -22px;">
-						<input type="button" class="button" value="Regresar" style="margin-left:40%;" onClick="javascript:history.back();" style="margin-left:40%;" />		
-					</div>	
-				</form>
-			</div>
+					<form action="services.html">
+						<div id="botonP" style="display: inline; margin-right: 30px;">
+									<input type="submit"  class="button"  name="sbmtButton" value="Modificar" />
+						</div>	
+						<div id="botonV" style="display: inline;">
+								<input type="button" class="button" value="Regresar" onClick="javascript:history.back();" />		
+						</div>	
+					</form>
+				</div>
 			</div>
 		</div>
 	</body>
