maqueta html doctores

--- a/WebContent/createDoctor.html
+++ b/WebContent/createDoctor.html
@@ -23,7 +23,7 @@
 					buttonImage: "images/calendar.png",
 					buttonImageOnly: true,
 					buttonText: "Seleccione una fecha",
-					dateFormat:'dd/mm/yy',
+					dateFormat:'dd/mm/yyyy',
 					changeMonth: true,
 				    changeYear: true
 				});
