--- a/WebContent/editDoctor.html
+++ b/WebContent/editDoctor.html
@@ -8,7 +8,27 @@
 	  	<script src="http://code.jquery.com/jquery-1.9.1.js"></script>
 		<script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
 		<script type="text/javascript" src="./js/jquery.leanModal.min.js"></script>
+		<script type="text/javascript" src="./js/jquery.ui.datepicker-es.js"></script>
 		<link rel="stylesheet" href="/resources/demos/style.css" />		
+		<script>
+			$(function() {
+				$( "#tabs" ).tabs();
+			});
+		</script>
+		<script type="text/javascript">
+			$(function(){
+				$.datepicker.setDefaults($.datepicker.regional['es']);
+				$('#txtDateIni').datepicker({
+					showOn: "button",
+					buttonImage: "images/calendar.png",
+					buttonImageOnly: true,
+					buttonText: "Seleccione una fecha",
+					dateFormat:'dd/mm/yyyy',
+					changeMonth: true,
+				    changeYear: true
+				});
+			} );
+		</script>
 	</head>
 	<body>
 		<div id="container">
@@ -45,36 +65,66 @@
         	<div id="content" style="position:absolute;">	
 	        	<h2>Crear Doctor:</h2>
 				<br>
-				<fieldset>
-					<label for="name">Cédula de Identidad:</label>
-					<input type="text" name="txtName" id="txtName" maxlength="50" size="5"/> <br><br>
-					<label for="name">Nombre:</label>
-					<input type="text" name="txtName" id="txtName" maxlength="50" size="5" value="Ricardo"/> <br><br>
-					<label for="name">Apellido:</label>
-					<input type="text" name="txtName" id="txtName" maxlength="50" size="5" value="López"/> <br><br>
-					<label for="name">Fecha de Nacimiento:</label>
-					<input type="text" name="txtName" id="txtName" maxlength="50" size="5"/> <br><br>
-					<label for="name">Sexo:</label>
-					<input type="text" name="txtName" id="txtName" maxlength="50" size="5"/> <br><br>
-					<label for="name">Dirección:</label>
-					<textarea name="txtDescription" id="txtDescription" rows="2" cols="50"></textarea> <br><br>
-					<label for="name">Correo Electrónico:</label>
-					<input type="text" name="txtName" id="txtName" maxlength="50" size="5"/> <br><br>
-					<label for="name">Teléfono:</label>
-					<input type="text" name="txtName" id="txtName" maxlength="50" size="5"/> <br><br>
-					<label for="name">Departamento:</label>
-					<input type="text" name="txtName" id="txtName" maxlength="50" size="5"/> <br>
-				</fieldset>
-				<div id="botonera">
-					<form action="doctors.html">
-						<div id="botonP" style="display: inline; margin-right: 30px;">
-									<input type="submit"  class="button"  name="sbmtButton" value="Modificar" />
-						</div>	
-						<div id="botonV" style="display: inline;">
-								<input type="button" class="button" value="Regresar" onClick="javascript:history.back();" />		
-						</div>	
-					</form>
-				</div><br>
+				<div id="tabs">
+					<ul>
+					    <li><a href="#tabs-1">Datos Personales</a></li>
+					    <li><a href="#tabs-2">Datos Contacto</a></li>
+			  		</ul>
+			  		<div id="tabs-1">
+						<fieldset>
+							<label for="name">Cédula de Identidad:</label>
+							<select name="txtCedId" id="txtCedId">
+								<option value="V-" selected>V</option>
+								<option value="E-">E</option>
+							</select>
+							<input type="text" name="txtCedIdNum" id="txtCedIdNum" maxlength="50" size="18" value="12345678" /> <br><br>
+							<label for="name">Nombre:</label>
+							<input type="text" name="txtName" id="txtName" maxlength="50" size="5" value="Ricardo"/> <br><br>
+							<label for="name">Apellido:</label>
+							<input type="text" name="txtName" id="txtName" maxlength="50" size="5" value="López"/> <br><br>
+							<label for="name">Fecha de Nacimiento:</label>
+							<input type="text" name="txtDateIni" id="txtDateIni" maxlength="50" size="10" value="07/09/1965"/> <br><br>
+							<label for="name">Sexo:</label>
+							<select name="txtGen" id="txtGen">	
+								<option value="-" selected="selected">Seleccionar</option>
+								<option value="F">Femenino</option>
+								<option value="M" selected>Masculino</option>
+							</select><br><br>
+						</fieldset>						
+						<div id="botonera">
+							<form action="doctors.html">
+								<div id="botonP" style="display: inline; margin-right: 30px;">
+											<input type="submit"  class="button"  name="sbmtButton" value="Modificar" />
+								</div>	
+								<div id="botonV" style="display: inline;">
+										<input type="button" class="button" value="Regresar" onClick="javascript:history.back();" />		
+								</div>	
+							</form>
+						</div><br>
+			  		</div>
+			  		<div id="tabs-2">
+						<fieldset>
+							<label for="name">Dirección:</label>
+							<textarea name="txtDescription" id="txtDescription" rows="2" cols="50"></textarea> <br><br>
+							<label for="name">Correo Electrónico:</label>
+							<input type="text" name="txtName" id="txtName" maxlength="50" size="5"/> <br><br>
+							<label for="name">Teléfono:</label>
+							<input type="text" name="txtName" id="txtName" maxlength="50" size="5"/> <br><br>
+							<label for="name">Departamento:</label>
+							<input type="text" name="txtName" id="txtName" maxlength="50" size="5"/> <br>
+						</fieldset>
+						<div id="botonera">
+							<form action="doctors.html">
+								<div id="botonP" style="display: inline; margin-right: 30px;">
+											<input type="submit"  class="button"  name="sbmtButton" value="Modificar" />
+								</div>	
+								<div id="botonV" style="display: inline;">
+										<input type="button" class="button" value="Regresar" onClick="javascript:history.back();" />		
+								</div>	
+							</form>
+						</div><br>
+					</div>
+				</div>
 			</div>
 		</div>
 	</body>
