--- a/WebContent/createEstimation.html
+++ b/WebContent/createEstimation.html
@@ -138,7 +138,7 @@
   					</div>
   					<div id="tabs-2">
   						<div style="text-align:right;">
-	  						<a id="go" style="color: #006c92; font-weight: bold;">
+	  						<a href="searchProtocols.html?function=createEstimation" style="color: #006c92; font-weight: bold;">
 								<img alt="logo" src="./images/add.png" height="12" width="12" />Agregar Protocolo
 							</a>						
   						</div>
@@ -151,8 +151,7 @@
 									<th>Acción</th>
 								</tr>				
 								<tr>
-									<td colspan="2" style="text-align: center;">El paciente aún no tiene ningún protócolo asignado</td>
-									
+									<td id="columna a cambiars" colspan="2" style="text-align: center;">El paciente aún no tiene ningún protócolo asignado</td>
 								</tr>				
 								
 							</tbody>
@@ -170,7 +169,7 @@
   					</div>
   					<div id="tabs-3">
   						<div style="text-align:right;">
-	  						<a id="go" style="color: #006c92; font-weight: bold;">
+	  						<a href="searchServices.html?function=createEstimation" style="color: #006c92; font-weight: bold;">
 								<img alt="logo" src="./images/add.png" height="12" width="12" />Agregar Servicio
 							</a>						
   						</div>
