--- a/WebContent/editEmergency.html
+++ b/WebContent/editEmergency.html
@@ -127,10 +127,10 @@
   					</div>
   					<div id="tabs-2">
   						<div style="text-align:right;">
-	  						<a id="go" style="color: #006c92; font-weight: bold;" href="#">
+							<a  href="searchProtocols.html?function=editEmergency" style="color: #006c92; font-weight: bold;">
 								<img alt="logo" src="./images/add.png" height="12" width="12" />Agregar Protocolo
 							</a>						
-  						</div>
+						</div>
   						<br>
   						<br>
   						<table id="sweetTable">
@@ -164,7 +164,7 @@
   					</div>
   					<div id="tabs-3">
   						<div style="text-align:right;">
-	  						<a id="go" style="color: #006c92; font-weight: bold;" href="#">
+	  						<a href="searchServices.html?function=editEmergency" style="color: #006c92; font-weight: bold;">
 								<img alt="logo" src="./images/add.png" height="12" width="12" />Agregar Servicio
 							</a>						
   						</div>
