--- a/WebContent/editEstimation.html
+++ b/WebContent/editEstimation.html
@@ -11,7 +11,8 @@
 		<link rel="stylesheet" href="/resources/demos/style.css" />
 		<script>
 			$(function() {
-				$( "#tabs" ).tabs();
+				$("#tabs").tabs();
+				$("#tabs").tabs("select", window.location.hash);
 			});
 		</script>
 		<script type="text/javascript">
@@ -139,7 +140,7 @@
 					</div>
   					<div id="tabs-2">
   						<div style="text-align:right;">
-	  						<a id="go" style="color: #006c92; font-weight: bold;">
+	  						<a href="searchProtocols.html?function=editEstimation" style="color: #006c92; font-weight: bold;">
 								<img alt="logo" src="./images/add.png" height="12" width="12" />Agregar Protocolo
 							</a>						
   						</div>
@@ -194,7 +195,7 @@
   					</div>
   					<div id="tabs-3">
   						<div style="text-align:right;">
-	  						<a id="go" style="color: #006c92; font-weight: bold;">
+	  						<a href="searchServices.html?function=editEstimation" style="color: #006c92; font-weight: bold;">
 								<img alt="logo" src="./images/add.png" height="12" width="12" />Agregar Servicio
 							</a>						
   						</div>
